// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pageCTA > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</section>"
`;

exports[`pageCTA > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="body" class="mt-8">Body slot</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with bottom slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>Bottom slot
</div>"
`;

exports[`pageCTA > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring rounded-none">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`pageCTA > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`pageCTA > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <div data-slot="description" class="text-base sm:text-lg color-text-muted text-center text-balance color-text-muted">Description</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <div data-slot="description" class="text-base sm:text-lg color-text-muted text-center text-balance color-text-muted">Description slot</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-8">Footer slot</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">Header slot</div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with links correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-8">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3 justify-center"><button type="button" data-slot="base" class="font-500 rounded-md inline-flex items-center aria-disabled:opacity-75 aria-disabled:cursor-not-allowed disabled:opacity-75 disabled:cursor-not-allowed transition-colors text-sm gap-2 color-text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3 px-3 py-2">
            <!--v-if--><span data-slot="label" class="truncate">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with links slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-8">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3 justify-center">Links slot</div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16 lg:grid-cols-2 lg:items-center" data-slot="container">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`pageCTA > renders with orientation horizontal links correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16 lg:grid-cols-2 lg:items-center" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-8">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3"><button type="button" data-slot="base" class="font-500 rounded-md inline-flex items-center aria-disabled:opacity-75 aria-disabled:cursor-not-allowed disabled:opacity-75 disabled:cursor-not-allowed transition-colors text-sm gap-2 color-text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3 px-3 py-2">
            <!--v-if--><span data-slot="label" class="truncate">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`pageCTA > renders with orientation horizontal reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16 lg:grid-cols-2 lg:items-center" data-slot="container">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`pageCTA > renders with reverse correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`pageCTA > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <h2 data-slot="title" class="text-3xl sm:text-4xl text-pretty tracking-tight font-700 color-text-highlighted text-center">Title</h2>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <h2 data-slot="title" class="text-3xl sm:text-4xl text-pretty tracking-tight font-700 color-text-highlighted text-center">Title slot</h2>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageCTA > renders with top slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">Top slot<div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`pageCTA > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16 max-w-5xl" data-slot="container"></div>
</div>"
`;

exports[`pageCTA > renders with variant naked correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`pageCTA > renders with variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`pageCTA > renders with variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background-elevated/50">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`pageCTA > renders with variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background-inverted color-text-inverted">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`pageCTA > renders with variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-background-elevated/50 ring ring-ring">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 px-6 py-12 flex flex-col gap-8 lg:px-16 lg:py-24 lg:grid sm:px-12 sm:py-24 sm:gap-16" data-slot="container"></div>
</div>"
`;
